--- a/style.css
+++ b/style.css
@@ -1,7 +1,24 @@
 *{
     margin:0;
     padding:0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+header{
+    background-image: url(img/neymar-rebaixado.jpg);
+    height: 450px;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    display: table;
+}
 
-
+header h1{
+    color: black;
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle;
+    font-size: 55px;
+}
