--- a/style.css
+++ b/style.css
@@ -22,3 +22,35 @@ header h1{
     vertical-align: middle;
     font-size: 55px;
 }
+body{
+    width: 99.9%;
+    height: 100em;
+}
+.container{
+    width: 85%;
+    height: 90em;
+    border: 1px black solid;
+    position: absolute;
+    left: 7.5%;
+    top: 10%;
+}
+.container h1{
+    color: rgb(95, 95, 95);
+    font-size: 3em;
+}
+.texto{
+    color:rgb(109, 109, 109);
+    font-size: 1.3em;
+    line-height: 2em;
+    margin-top: 4em;
+}
+.titulo{
+    font-size: 1.06em;
+    color: gray;
+}
+.container img{
+    width: 100%;
+    height: 35em;
+    margin-top: 3em;
+
+}
