--- a/style.css
+++ b/style.css
@@ -2,6 +2,68 @@
     margin:0;
     padding:0;
 }
+/*FOOTER*/
+footer{
+    width: 100%;
+    height: 500px;
+    background-color: rgb(234, 234, 234);
+}
+footer img{
+    width: 350px;
+    height: 200px;
+}
+.sim{
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    gap: 200px;
+    position: relative;
+    top: 50px;
+    left: 200px;
+}
+.titulo{
+    position: relative;
+    top: 40px;
+    left: 200px;
+    display: flex;
+    gap: 485px;
+}
+.textos{
+    width: 1450px;
+    height: 200px;
+    display: flex;
+    position: relative;
+    top: 50px;
+    left: 200px;
+    gap: 190px;
+}
+#button, #button2, #button3{
+    width: 80px;
+    height: 30px;
+    border: none;
+    border-radius: 15px;
+    background-color: lightgrey;
+    color: rgba(32,33,36,1);
+    font-weight: bold;
+}
+#button{
+    position: relative;
+    bottom: 50px;
+    margin-left: 190px;
+}
+#button2{
+    position: relative;
+    bottom: 50px;
+    margin-left: 470px;
+}
+#button3{
+    position: relative;
+    bottom: 50px;
+    margin-left: 470px;
+}
+#button:hover, #button2:hover, #button3:hover{
+    background-color: #06AA48;
+}
 
 
 
